Refactor upload.prx.org Lambda alarms

--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -54,9 +54,14 @@ Resources:
         OpsErrorMessagesSnsTopicArn:
           Fn::ImportValue:
             !Sub "${InfrastructureNotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+        OpsWarnMessagesSnsTopicArn:
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+        OpsFatalMessagesSnsTopicArn:
+          Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsFatalMessagesSnsTopicArn"
         PRXUploadAccessKey: !Ref PRXUploadAccessKey
         EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
         WildcardCertificateArn: !Ref WildcardCertificateArn
         CodeS3Bucket:
           Fn::ImportValue:
