Fix template error

--- a/etc/dovetail-edge-deploy.yml
+++ b/etc/dovetail-edge-deploy.yml
@@ -673,7 +673,8 @@ Resources:
                   print('Function failed due to exception.')
                   print(e)
                   traceback.print_exc()
-                  put_job_failure(job, 'Function exception: ' + str(e))      Description: tktktktk
+                  put_job_failure(job, 'Function exception: ' + str(e))
+      Description: tktktktk
       Handler: index.lambda_handler
       Environment:
         Variables:
