Enable Dovetaill pipeline changeset action

--- a/etc/dovetail-edge-deploy.yml
+++ b/etc/dovetail-edge-deploy.yml
@@ -279,35 +279,35 @@ Resources:
               OutputArtifacts:
                 - Name: LambdaVersionsArtifact
               RunOrder: 2
-        # - Name: Staging
-        #   Actions:
-        #     - Name: CreateStagingChangeSet
-        #       ActionTypeId:
-        #         Category: Deploy
-        #         Owner: AWS
-        #         Provider: CloudFormation
-        #         Version: "1"
-        #       Configuration:
-        #         ActionMode: CHANGE_SET_REPLACE
-        #         Capabilities: CAPABILITY_IAM
-        #         ChangeSetName: !Sub ${AWS::StackName}StagingChangeSet
-        #         RoleArn: !GetAtt CloudFormationIamRole.Arn
-        #         StackName: !Ref StagingCloudFormationStackName
-        #         ParameterOverrides: !Sub |
-        #           {
-        #             # These are the parameters of cdn/dovetail-cdn.yml
-        #             "OriginBucket": "${StagingOriginBucket}",
-        #             "OriginPath": "${StagingOriginPath}",
-        #             "DistributionDomain": "${StagingDistributionDomain}",
-        #             "LambdaFunctionArn": { "Fn::GetParam" : ["LambdaVersionsArtifact", "versions.json", "staging_stitch"]},
-        #             "LambdaBytesFunctionArn": { "Fn::GetParam" : ["LambdaVersionsArtifact", "versions.json", "staging_bytes"]},
-        #             "InfrastructureNotificationsStackName": "${InfrastructureNotificationsStackName}"
-        #           }
-        #         TemplatePath: InfrastructureRepoSourceArtifact::cdn/dovetail-cdn.yml
-        #       InputArtifacts:
-        #         - Name: InfrastructureRepoSourceArtifact
-        #         - Name: LambdaVersionsArtifact
-        #       RunOrder: 1
+        - Name: Staging
+          Actions:
+            - Name: CreateStagingChangeSet
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormation
+                Version: "1"
+              Configuration:
+                ActionMode: CHANGE_SET_REPLACE
+                Capabilities: CAPABILITY_IAM
+                ChangeSetName: !Sub ${AWS::StackName}StagingChangeSet
+                RoleArn: !GetAtt CloudFormationIamRole.Arn
+                StackName: !Ref StagingCloudFormationStackName
+                ParameterOverrides: !Sub |
+                  {
+                    # These are the parameters of cdn/dovetail-cdn.yml
+                    "OriginBucket": "${StagingOriginBucket}",
+                    "OriginPath": "${StagingOriginPath}",
+                    "DistributionDomain": "${StagingDistributionDomain}",
+                    "LambdaFunctionArn": { "Fn::GetParam" : ["LambdaVersionsArtifact", "versions.json", "staging_stitch"]},
+                    "LambdaBytesFunctionArn": { "Fn::GetParam" : ["LambdaVersionsArtifact", "versions.json", "staging_bytes"]},
+                    "InfrastructureNotificationsStackName": "${InfrastructureNotificationsStackName}"
+                  }
+                TemplatePath: InfrastructureRepoSourceArtifact::cdn/dovetail-cdn.yml
+              InputArtifacts:
+                - Name: InfrastructureRepoSourceArtifact
+                - Name: LambdaVersionsArtifact
+              RunOrder: 1
         #     # TODO Generate delta and send notification
         #     - Name: ExecuteStagingChangeSet
         #       ActionTypeId:
