Correct Slack channel for Eventbrite Lambda

--- a/etc/eventbrite-webhooks.yml
+++ b/etc/eventbrite-webhooks.yml
@@ -98,7 +98,7 @@ Resources:
 
           const sns = new AWS.SNS({ apiVersion: '2010-03-31' });
 
-          const SLACK_CHANNEL = '#garage-registrations';
+          const SLACK_CHANNEL = '#garage-registration';
           const SLACK_USERNAME = 'Eventbrite';
           const SLACK_ICON = ':eventbrite:';
 
