Output entire Lambda ARN from Dovetail deploy action

--- a/etc/dovetail-edge-deploy.yml
+++ b/etc/dovetail-edge-deploy.yml
@@ -792,10 +792,10 @@ Resources:
               )
 
               return {
-                'staging_bytes': staging_bytes['Versions'][-1]['Version'],
-                'staging_stitch': staging_stitch['Versions'][-1]['Version'],
-                'production_bytes': production_bytes['Versions'][-1]['Version'],
-                'production_stitch': production_stitch['Versions'][-1]['Version']
+                'staging_bytes': f"{os.environ['STAGING_BYTES_LAMBDA_FUNCTION_ARN']}:{staging_bytes['Versions'][-1]['Version']}",
+                'staging_stitch': f"{os.environ['STAGING_STITCH_LAMBDA_FUNCTION_ARN']}:{staging_stitch['Versions'][-1]['Version']}",
+                'production_bytes': f"{os.environ['PRODUCTION_BYTES_LAMBDA_FUNCTION_ARN']}:{production_bytes['Versions'][-1]['Version']}",
+                'production_stitch': f"{os.environ['PRODUCTION_STITCH_LAMBDA_FUNCTION_ARN']}:{production_stitch['Versions'][-1]['Version']}"
               }
 
 
