--- a/etc/dovetail-edge-deploy.yml
+++ b/etc/dovetail-edge-deploy.yml
@@ -203,6 +203,39 @@ Resources:
                 Resource:
                   - !Sub arn:aws:s3:::${PipelineArtifactStore}
                   - !Sub arn:aws:s3:::${PipelineArtifactStore}/*
+        # Let CodePipeline describe CloudFormation stacks
+        - PolicyName: CloudFormationAccess
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - cloudformation:*
+                Resource:
+                  - !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${StagingCloudFormationStackName}
+                  - !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${StagingCloudFormationStackName}/*
+              - Effect: Allow
+                Action:
+                  - cloudformation:DescribeStacks
+                  - cloudformation:CreateStack
+                  - cloudformation:UpdateStack
+                  - cloudformation:DescribeChangeSet
+                  - cloudformation:CreateChangeSet
+                  - cloudformation:ExecuteChangeSet
+                  - cloudformation:DeleteChangeSet
+                Resource:
+                  - !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${ProductionCloudFormationStackName}
+                  - !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/${ProductionCloudFormationStackName}/*
+        # Allow PassRole to the CloudFormation role
+        - PolicyName: IamPassRole
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "iam:PassRole"
+                Resource:
+                  - !GetAtt CloudFormationIamRole.Arn
         # Allows CodePipeline to invoke Lambda function actions
         - PolicyName: LambdaRolePolicy
           PolicyDocument:
@@ -217,6 +250,7 @@ Resources:
                   - "lambda:InvokeFunction"
                 Resource:
                   - !GetAtt DiscoverEdgeLambdaVersionsFunction.Arn
+                  - !GetAtt PublishEdgeLambdaVersionsFunction.Arn
   Pipeline:
     Type: AWS::CodePipeline::Pipeline
     Properties:
