Add Lambda permissions to Dovetail deploy Cfn role

--- a/etc/dovetail-edge-deploy.yml
+++ b/etc/dovetail-edge-deploy.yml
@@ -637,6 +637,15 @@ Resources:
                   - "cloudwatch:EnableAlarmActions"
                   - "cloudwatch:PutMetricAlarm"
                 Resource: "*"
+        - PolicyName: LambdaPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "lambda:GetFunction"
+                  - "lambda:EnableReplication"
+                Resource: "*"
   # Pipeline functions
   PublishEdgeLambdaVersionsFunctionIamRole:
     Type: AWS::IAM::Role
