Enable staging deploy on Dovetail pipeline

--- a/etc/dovetail-edge-deploy.yml
+++ b/etc/dovetail-edge-deploy.yml
@@ -370,19 +370,19 @@ Resources:
                     "Stage": "Staging"
                   }
               RunOrder: 2
-        #     - Name: ExecuteStagingChangeSet
-        #       ActionTypeId:
-        #         Category: Deploy
-        #         Owner: AWS
-        #         Provider: CloudFormation
-        #         Version: "1"
-        #       Configuration:
-        #         ActionMode: CHANGE_SET_EXECUTE
-        #         Capabilities: CAPABILITY_IAM
-        #         ChangeSetName: !Sub ${AWS::StackName}StagingChangeSet
-        #         RoleArn: !GetAtt CloudFormationIamRole.Arn
-        #         StackName: !Ref StagingCloudFormationStackName
-        #       RunOrder: 2
+            - Name: ExecuteStagingChangeSet
+              ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Provider: CloudFormation
+                Version: "1"
+              Configuration:
+                ActionMode: CHANGE_SET_EXECUTE
+                Capabilities: CAPABILITY_IAM
+                ChangeSetName: !Sub ${AWS::StackName}StagingChangeSet
+                RoleArn: !GetAtt CloudFormationIamRole.Arn
+                StackName: !Ref StagingCloudFormationStackName
+              RunOrder: 3
         - Name: Testing
           Actions:
             - Name: Acceptance
