Add mising S3 policy to DT pipeline Cfn role

--- a/etc/dovetail-edge-deploy.yml
+++ b/etc/dovetail-edge-deploy.yml
@@ -646,6 +646,15 @@ Resources:
                   - "lambda:GetFunction"
                   - "lambda:EnableReplication"
                 Resource: "*"
+        - PolicyName: CfLogsS3Policy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "s3:GetBucketAcl"
+                  - "s3:PutBucketAcl" # TODO This one is a little scary
+                Resource: "*"
   # Pipeline functions
   PublishEdgeLambdaVersionsFunctionIamRole:
     Type: AWS::IAM::Role
