Add parameter constraints

--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -125,6 +125,9 @@ Parameters:
       comma-delimited list (e.g. "cdn1.example.com,cdn2.example.com")
   OriginDomain:
     Type: String
+    AllowedPattern: ^.+\.[a-zA-Z]+$
+    ConstraintDescription: >
+      must be a hostname or of the format mybucket.s3.amazonaws.com
     Description: >
       The DNS name of the Amazon Simple Storage Service (S3) bucket or the HTTP
       server from which you want CloudFront to get objects for this origin.
@@ -137,7 +140,9 @@ Parameters:
       mark (/) and cannot end with a slash mark.
   CloudFrontLoggingBucket:
     Type: String
-    Default: xyz.s3.amazonaws.com
+    AllowedPattern: ^$|^.+\.s3\.amazonaws\.com$
+    ConstraintDescription: >
+      must be of the format mybucket.s3.amazonaws.com
     Description: >
       The Amazon S3 bucket address where access logs are stored for CloudFront.
       (e.g., mybucket.s3.amazonaws.com)
@@ -145,7 +150,7 @@ Parameters:
     Type: String
     Description: >
       (optional) A prefix for the access log file names for the CloudFront
-      distribution.
+      distribution. (e.g., myprefix/)
   CloudFrontComment:
     Type: String
     Description: >
