Improve parameter validations and descriptions

--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -120,12 +120,14 @@ Metadata:
 Parameters:
   ProjectTag:
     Type: String
+    AllowedPattern: ^.+$
+    ConstraintDescription: must not be blank
     Description: >
       The value used for the Project tag on resources that support tagging.
   Cnames:
     Type: CommaDelimitedList
     Description: >
-      The CNAMEs (alternate domain names) for the distribution, as a
+      (optional) The CNAMEs (alternate domain names) for the distribution, as a
       comma-delimited list (e.g. "cdn1.example.com,cdn2.example.com")
   OriginDomain:
     Type: String
@@ -148,8 +150,8 @@ Parameters:
     ConstraintDescription: >
       must be of the format mybucket.s3.amazonaws.com
     Description: >
-      The Amazon S3 bucket address where access logs are stored for CloudFront.
-      (e.g., mybucket.s3.amazonaws.com)
+      (optional) The Amazon S3 bucket address where access logs are stored for
+      CloudFront. (e.g., mybucket.s3.amazonaws.com)
   CloudFrontLoggingBucketPrefix:
     Type: String
     Description: >
@@ -157,23 +159,26 @@ Parameters:
       distribution. (e.g., myprefix/)
   CloudFrontComment:
     Type: String
+    AllowedPattern: ^.+$
+    ConstraintDescription: must not be blank
     Description: >
       Any comments that you want to include about the CloudFront distribution
     MaxLength: 128
   CloudFrontMinTtl:
     Type: String
     Description: >
-      The minimum amount of time that you want objects to stay in CloudFront
-      caches before CloudFront forwards another request to your origin to
-      determine whether the object has been updated.
+      (optional) The minimum amount of time that you want objects to stay in
+      CloudFront caches before CloudFront forwards another request to your
+      origin to determine whether the object has been updated.
   CloudFrontMaxTtl:
     Type: String
     Description: >
-      The maximum amount of time, in seconds, that you want objects to stay in
-      CloudFront caches before CloudFront forwards another request to your
-      origin to determine whether the object has been updated. The value that
-      you specify applies only when your origin adds HTTP headers such as
-      Cache-Control max-age, Cache-Control s-maxage, and Expires to objects
+      (optional) The maximum amount of time, in seconds, that you want objects
+      to stay in CloudFront caches before CloudFront forwards another request
+      to your origin to determine whether the object has been updated. The
+      value that you specify applies only when your origin adds HTTP headers
+      such as Cache-Control max-age, Cache-Control s-maxage, and Expires to
+      objects
   CloudFrontPriceClass:
     Type: String
     Description: >
@@ -242,15 +247,16 @@ Parameters:
   CloudFrontCustom403ErrorResponseCode:
     Type: String
     Description: >
-      A custom HTTP resonse code to return when a 403 is returned by the origin
+      (optional) A custom HTTP resonse code to return when a 403 is returned by the origin
+      by the origin
   CloudFrontCustom403ErrorResponsePagePath:
     Type: String
     Description: >
-      A custom page to return when a 403 is returned by the origin
+      (optional) A custom page to return when a 403 is returned by the origin
   CloudFrontWebACLId:
     Type: String
     Description: >
-      The AWS WAF web ACL to associate with this distribution
+      (optional) The AWS WAF web ACL to associate with this distribution
   AcmCertificateArn:
     Type: String
     Description: >
