--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -247,7 +247,7 @@ Parameters:
   CloudFrontCustom403ErrorResponseCode:
     Type: String
     Description: >
-      (optional) A custom HTTP resonse code to return when a 403 is returned by the origin
+      (optional) A custom HTTP response code to return when a 403 is returned by the origin
       by the origin
   CloudFrontCustom403ErrorResponsePagePath:
     Type: String
