Improve parameter descriptions and validations

--- a/cdn/single-origin.yml
+++ b/cdn/single-origin.yml
@@ -137,8 +137,12 @@ Parameters:
     Description: >
       The DNS name of the Amazon Simple Storage Service (S3) bucket or the HTTP
       server from which you want CloudFront to get objects for this origin.
+      (e.g. "example.com" or "mybucket.s3.amazonaws.com")
   OriginPath:
     Type: String
+    AllowedPattern: ^$|^\/..+(?<!\/)$
+    ConstraintDescription: >
+      must start with a slash and must not end with a slash
     Description: >
       (optional) The path that CloudFront uses to request content from an S3
       bucket or custom origin. The combination of the DomainName and OriginPath
@@ -260,8 +264,9 @@ Parameters:
   AcmCertificateArn:
     Type: String
     Description: >
-      ARN for the ACM certificate that will be used with the CloudFront
-      distribution. If no value is supplied, a new certificate will be created.
+      (optional) ARN for the ACM certificate that will be used with the
+      CloudFront distribution. If no value is supplied, a new certificate will
+      be created.
   CertificateAttachment:
     Type: String
     Description: >
