Add publicfeeds.net hosted zone deployment pipeline

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -1,4 +1,9 @@
 # dns/publicfeeds.net-hosted_zone.yml
+################################################################################
+#### !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! ########################################
+#### THIS FILE IS CONTINUOUSLY DEPLOYED ########################################
+#### !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! ########################################
+################################################################################
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Hosted zone and record sets for publicfeeds.net
