--- a/stacks/container-apps/web-application.yml
+++ b/stacks/container-apps/web-application.yml
@@ -377,6 +377,9 @@ Outputs:
   WorkerTaskDefinitionName:
     Description: Name of the worker task definition
     Value: !Sub ${AppName}-worker
+  WorkerServiceName:
+    Description: Name of the worker service
+    Value: !If [CreateWorkerResources, !GetAtt WorkerService.Name, ""]
   HostedZoneDNSName:
     Description: Convenience domain name for the ALB in a hosted zone
     Value: !Sub |
