--- a/stacks/serverless/pixel.prx.org.yml
+++ b/stacks/serverless/pixel.prx.org.yml
@@ -26,18 +26,22 @@ Mappings:
   EnvironmentTypeMap:
     Testing:
       DomainName: "pixel.test.prx.tech"
+      CNames: "pixel.test.prx.tech"
       HostedZoneName: "prx.tech."
     Staging:
       DomainName: "pixel.staging.prx.tech"
+      CNames: "pixel.staging.prx.tech"
       HostedZoneName: "prx.tech."
     Production:
       DomainName: "pixel.prx.org"
+      CNames: "pixel.prx.org,pixel.pri.org"
       HostedZoneName: "prx.org."
 Resources:
   Certificate:
     Type: "AWS::CertificateManager::Certificate"
     Properties:
       DomainName: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
+      SubjectAlternativeNames: !Split [",", !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, CNames]]
       ValidationMethod: DNS
       Tags:
         - Key: Project
