--- a/stacks/serverless/pixel.prx.org.yml
+++ b/stacks/serverless/pixel.prx.org.yml
@@ -3,6 +3,7 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: API Gateway pixel tracker
 Conditions:
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
+  HasAltDomainName: !Not [!Equals [!FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, AltDomainName], ""]]
 Parameters:
   OpsWarnMessagesSnsTopicArn:
     Type: String
@@ -26,22 +27,24 @@ Mappings:
   EnvironmentTypeMap:
     Testing:
       DomainName: "pixel.test.prx.tech"
-      CNames: "pixel.test.prx.tech"
+      AltDomainName: ""
       HostedZoneName: "prx.tech."
     Staging:
       DomainName: "pixel.staging.prx.tech"
-      CNames: "pixel.staging.prx.tech"
+      AltDomainName: ""
       HostedZoneName: "prx.tech."
     Production:
       DomainName: "pixel.prx.org"
-      CNames: "pixel.prx.org,pixel.pri.org"
+      AltDomainName: "pixel.pri.org"
       HostedZoneName: "prx.org."
 Resources:
   Certificate:
     Type: "AWS::CertificateManager::Certificate"
     Properties:
       DomainName: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
-      SubjectAlternativeNames: !Split [",", !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, CNames]]
+      SubjectAlternativeNames:
+        - !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
+        - !If [HasAltDomainName, !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, AltDomainName], !Ref AWS::NoValue]
       ValidationMethod: DNS
       Tags:
         - Key: Project
@@ -194,6 +197,19 @@ Resources:
           AliasTarget:
             DNSName: !GetAtt PixelRestApiDomainName.DistributionDomainName
             HostedZoneId: Z2FDTNDATAQYW2
+  PixelRestApiAltDomainName:
+    Type: "AWS::ApiGateway::DomainName"
+    Condition: HasAltDomainName
+    Properties:
+      CertificateArn: !Ref Certificate
+      DomainName: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, AltDomainName]
+  PixelRestApiAltBasePathMapping:
+    Type: "AWS::ApiGateway::BasePathMapping"
+    Condition: HasAltDomainName
+    Properties:
+      DomainName: !Ref PixelRestApiAltDomainName
+      RestApiId: !Ref PixelRestApi
+      Stage: prod
   ApiGateway5XXAlarm:
     Type: "AWS::CloudWatch::Alarm"
     Properties:
