--- a/stacks/serverless/pixel.prx.org.yml
+++ b/stacks/serverless/pixel.prx.org.yml
@@ -44,7 +44,10 @@ Resources:
       DomainName: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
       SubjectAlternativeNames:
         - !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
-        - !If [HasAltDomainName, !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, AltDomainName], !Ref AWS::NoValue]
+        - !If
+          - HasAltDomainName
+          - !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, AltDomainName]
+          - !Ref AWS::NoValue
       ValidationMethod: DNS
       Tags:
         - Key: Project
