Update Eventbrite Slack message formatting

--- a/etc/eventbrite-webhooks.yml
+++ b/etc/eventbrite-webhooks.yml
@@ -175,10 +175,10 @@ Resources:
 
               return {
                   channel: SLACK_CHANNEL,
-                  username: SLACK_USERNAME,
+                  username: `${SLACK_USERNAME} (${event.venue.address.city}, ${event.venue.address.region})`,
                   icon_emoji: SLACK_ICON,
                   text: [
-                      `<mailto:${order.email}|${order.name}> ordered <${orderUrl}|${tickets}> for <${event.url}|${event.name.text}> @ ${event.venue.address.city}, ${event.venue.address.region} (<${adminUrl}|Manage>)`,
+                      `<mailto:${order.email}|${order.name}> ordered <${orderUrl}|${tickets}> for <${event.url}|${event.name.text}> (<${adminUrl}|Manage>)`,
                       `> ${total_sold} tickets ordered – ${remaining} remaining`
                   ].join('\n')
               };
@@ -198,6 +198,7 @@ Resources:
                   });
               });
           }
+
       Description: Backs Eventbite webhook API Gateway
       Environment:
         Variables:
